# MySearch

./: .gitignore  Cargo.toml  README.md
benches/: my_benchmark.rs
src/: index.rs  main.rs
