[package]
name = "mysearch"
version = "0.1.0"
authors = ["qpadev <fino.alessio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.0"
fst = {version="0.4",features=["levenshtein"]}
bincode = "1.3"
memmap = "0.7.0"
once_cell = "1.5.2"
levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
meilisearch-tokenizer = { git = "https://github.com/alessiofino/Tokenizer", branch="main"}
heed = "0.10.6"
jemallocator = "0.3.2"
sdset = "0.4.0"
env_logger = "0.8.2"
log = "0.4.11"
fnv = "1.0.3"
ncurses = "5.100.0"
lru = "0.6.3"
clap = "2.33.3"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true
